# war_or_peace

./: pyproject.toml
src/: card.py  deck.py
tests/: test_card.py
tests/test_card/: test_card.py
tests/test_deck/: test_deck.py
tests/test_player/: test_player.py
