[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "war_or_peace"
version = "0.0.1"
authors = [
  { name="Gavin Carew", linkedin="https://www.linkedin.com/in/gavin-carew/" },
]
description = "The card game WAR"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gjcarew/war_or_peace"
"Bug Tracker" = "https://github.com/gjcarew/war_or_peace/issues"